==== Changelog.txt ====
@date: October 19, 2011

=== Version 1.4 ===
* released ...
* published ...

== Code ==
* Added textdomain as needed to string functions
* Added previous and next post navigation in the `single.php` template
* Removed `show_avatar` function - not used
* Removed `bns_menu` function - not used
* Removed `nona_get_page_number` function - no longer used
* Removed display of 'Featured Image' in `single.php` for aesthetic reasons
* Replaced `the_author_posts_link` (deprecated) with `get_author_posts_url`
* Updated 'BNS Dynamic Copyright' and renamed to 'NoNa Dynamic Copyright'
* Updated 'BNS Theme Version' and renamed to 'NoNa Theme Version'

== CSS ==
* `font-size` changed to base of 115% from 18px
* all font-sizes changed to percentage base; some additional adjustments made
* more consistent formatting
* general clean-up and minor optimizations and additions
* added `max-width` parameter to address gallery with up to ten (10) columns
* removed .avatar class; not used (and conflicts with v3.3-beta1 Admin Bar)
* added CSS to support `editor-style`
 
== Code & CSS ==
* Updated menu system
* Cleaned up widget code in functions.php
* Cleaned up template code eliminating unneeded code

== Miscellaneous ==
* Changed to 'new' changelog format
* Corrected Theme Name to NoNa

/* Internet Browsers Reviewed
 * ==========================
 *
 * Apple Safari v5.1
 * Firefox v7.0.1
 * Google Chrome v14.0
 * Internet Explorer v9.0
 * Opera v11.52
 * 
 */  

--------------------------------------------------------------------------------
=== Version 1.3.1 ===
* released: January 13, 2011
* Trac ticket: http://themes.trac.wordpress.org/ticket/2582
* correct for missing 'echo' on home_url() calls

=== Version 1.3 ===
* added WP3.0 custom menu functionality
* modified the theme description for clarity
* updated call to search form with get_search_form()
* added readme.txt file (includes TO-DO list)
* added post-thumbnail support to all templates

=== Version 1.2 ===