@@ -32,11 +32,13 @@
                         the_post_thumbnail( 'thumbnail', array( 'class' => 'alignleft' ) );
                     }
                     if ( $count == 1 ) :
-                        the_content();
+                        the_content( __( 'Read more... ', 'nona' ) ); ?>
+                        <div class="clear"></div> <!-- For inserted media at the end of the post -->
+                        <?php wp_link_pages( array( 'before' => '<p><strong>' . __( 'Pages: ', 'nona') . '</strong>', 'after' => '</p>', 'next_or_number' => 'number' ) );
                     else :
-                        the_excerpt();
-                    endif; ?>
-                    <div class="clear"></div> <!-- For inserted media at the end of the post -->
+                        the_excerpt(); ?>
+                        <div class="clear"></div> <!-- For inserted media at the end of the post -->
+                    <?php endif; ?>
                 </div> <!-- .post #post-ID -->
             <?php endwhile; ?>
             <div id="nav-global" class="navigation">
@@ -59,4 +61,4 @@
 </div> <!-- #main-blog -->
 <?php get_sidebar();
 get_footer();?>
-<?php /* Last revised October 16, 2011 v1.4 */ ?>
+<?php /* Last revised October 21, 2011 v1.4 */ ?>
