@@ -29,12 +29,14 @@
                         <?php _e( 'in ', 'nona' ); the_category( ', ' ); ?><br />
                         <?php the_tags( __( 'as ', 'nona' ), ', ', '' ); ?><br />
                     </div> <!-- .post-details -->
-                    <?php if ( ( $count <= 2 ) && ( $paged < 2 ) ) {
-                        the_content();
-                    } else {
-                        the_excerpt();
-                    } ?>
-                    <div class="clear"></div> <!-- For inserted media at the end of the post -->
+                    <?php if ( ( $count <= 2 ) && ( $paged < 2 ) ) :
+                        the_content( __( 'Read more... ', 'nona' ) ); ?>
+                        <div class="clear"></div> <!-- For inserted media at the end of the post -->
+                        <?php wp_link_pages( array( 'before' => '<p><strong>' . __( 'Pages: ', 'nona') . '</strong>', 'after' => '</p>', 'next_or_number' => 'number' ) );
+                    else :
+                        the_excerpt(); ?>
+                        <div class="clear"></div> <!-- For inserted media at the end of the post -->
+                    <?php endif; ?>
                 </div> <!-- .post #post-ID -->
             <?php endwhile; ?>
             <div id="nav-global" class="navigation">
@@ -57,4 +59,4 @@
 </div> <!-- #main-blog -->
 <?php get_sidebar(); ?>
 <?php get_footer();?>
-<?php /* Last revised October 19, 2011 v1.4 */ ?>
+<?php /* Last revised October 21, 2011 v1.4 */ ?>
