@@ -1,5 +1,5 @@
 ==== Changelog.txt ====
-@date: October 19, 2011
+@date: October 21, 2011
 
 === Version 1.4 ===
 * released ...
@@ -8,6 +8,7 @@
 == Code ==
 * Added textdomain as needed to string functions
 * Added previous and next post navigation in the `single.php` template
+* Added `wp_link_pages` after every instance of `the_content`
 * Removed `show_avatar` function - not used
 * Removed `bns_menu` function - not used
 * Removed `nona_get_page_number` function - no longer used
